# Mini-Terminal-File-Manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TASKS.md  compile_commands.json  main.cpp  script.py
core/: context.cpp  context.hpp
core/builtins/: builtins.cpp  builtins.hpp
core/parser/: parser.cpp  parser.hpp
docs/: CODING_GUIDELINES.md
include/: app.hpp  command_handler.hpp  command_history.hpp  command_line.hpp  commandline.hpp  config.hpp  core.hpp  cursor.hpp  dialog.hpp  editor.hpp  file.hpp  input.hpp  path.hpp  renderer.hpp  rows.hpp  screen.hpp  terminal.hpp  utils.hpp
include/commands/: command_executor.hpp  command_handler.hpp  command_history.hpp  command_line.hpp  command_mapper.hpp  command_parser.hpp
readme/: CHECKLIST.md  DOCS_VOCAB.md  README.md  TASKS.md  TOCHECK.md
src/: app.cpp  command_handler.cpp  command_history.cpp  config.cpp  core.cpp  cursor.cpp  dialog.cpp  file.cpp  input.cpp  main.cpp  path.cpp  renderer.cpp  rows.cpp  screen.cpp  terminal.cpp  utils.cpp
src/commands/: command_executor.cpp  command_handler.cpp  command_history.cpp  command_mapper.cpp  command_parser.cpp
ui/: input.cpp  input.hpp
ui/input/: input.cpp  input.hpp
ui/render/: render.cpp  render.hpp
utils/: misc.hpp  string_utils.cpp  string_utils.hpp  utils.cpp  utils.hpp
